--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&family=Spectral:wght@700&display=swap');
+
 * {
     box-sizing: border-box;
 }
@@ -16,6 +18,11 @@ h2,
 h4,
 p {
     margin: 0px;
+}
+
+a {
+    text-decoration: none;
+    color: #333;
 }
 
 ul,
@@ -42,4 +49,45 @@ input {
     max-width: 50rem;
     padding: 0 1rem;
     margin: 0 auto;
+}
+
+.mainContainer {
+    margin-top: 4rem;
+}
+
+.animeLeft {
+    opacity: 0;
+    transform: translateX(-20px);
+    animation: animeLeft 0.3s forwards;
+}
+
+@keyframes animeLeft {
+    to {
+        opacity: 1;
+        transform: initial;
+    }
+
+}
+
+.title {
+    font-family: var(--type-second);
+    line-height: 1;
+    font-size: 3rem;
+    margin: 1rem 0;
+    position: relative;
+    z-index: 1;
+}
+
+.title::after {
+    content: '';
+    display: block;
+    width: 1.5rem;
+    height: 1.5rem;
+    background: #fb1;
+    position: absolute;
+    bottom: 5px;
+    left: -5px;
+    border-radius: 0.2rem;
+    z-index: -1;
+
 }
