add loading scroll pagina da foto perfil do usuario e error 404

--- a/src/components/Photo/css/PhotoContent.module.css
+++ b/src/components/Photo/css/PhotoContent.module.css
@@ -12,6 +12,11 @@
     animation: scaleUp .3s forwards;
 }
 
+.single.photo {
+    grid-template-columns: 1fr;
+    height: auto;
+}
+
 @keyframes scaleUp {
     to {
         opacity: initial;
@@ -21,6 +26,10 @@
 
 .details {
     padding: 2rem 2rem 0 2rem;
+}
+
+.single.details {
+    padding: 1rem 0px 0px 0px;
 }
 
 .author {
@@ -72,9 +81,11 @@
     grid-row: 1/4;
 }
 
-.comments {
-    padding: 0 2rem;
+.single.img {
+    border-radius: .4rem;
+    overflow: hidden;
 }
+
 
 
 @media(max-width: 40rem) {
