--- a/src/App.css
+++ b/src/App.css
@@ -98,3 +98,11 @@ input {
     min-height: calc(100vh + 10rem);
 
 }
+
+.AppBody{
+    flex: 1;
+}
+
+.VictoryContainer {
+    height: initial !important;
+}
